--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "bottlerocket-code-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://brandonwellis.com/lunch-tyme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "google-maps-react": "^2.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0"
